--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.cats</groupId>
     <artifactId>CoreInstaller</artifactId>
-    <version>2.3.2</version>
+    <version>2.4-rc1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20231013</version>
+            <version>20250517</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
