--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.cats</groupId>
     <artifactId>CoreInstaller</artifactId>
-    <version>2.4-rc1</version>
+    <version>2.4</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
